<?xml version="1.0"?>
<package>
  <name>common</name>
  <version>0.0.0</version>
  <description>The common package</description>
  <maintainer email="david@swords.computer">s</maintainer>
  <license>BSD 2-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
