<?xml version="1.0"?>
<package>
  <name>graph</name>
  <version>0.0.0</version>
  <description>The graph package</description>
  <maintainer email="david@swords.computer">David Swords</maintainer>
  <license>BSD 2-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
