<?xml version="1.0"?>
<package>
  <name>scanner</name>
  <version>0.0.0</version>
  <description>The scanner package</description>
  <maintainer email="david@swords.computer">David Swords</maintainer>
  <license>BSD 2-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export>
  </export>
</package>
